Changes on header

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           class="navbar-brand fw-bold d-flex justify-content-center align-items-center"
           href="index.html"
         >
-          <span class="text-dark">Jani Collection </span>
+          <span class="text-dark">Sad Guru Arts And  Craft  </span>
         </a>
 
         <!-- Right Side Icons (Always visible) -->
@@ -154,6 +154,7 @@
               <li><a href="#" class="d-block py-1">Services</a></li>
               <li><a href="#" class="d-block py-1">Contact</a></li>
               <li><a href="#" class="d-block py-1">Products</a></li>
+              <li><a href="#" class="d-block py-1">Collections</a></li>
             </ul>
           </li>
         </ul>
