--- a/collection.html
+++ b/collection.html
@@ -123,7 +123,7 @@
                   These elegant tea coasters protect surfaces while adding a
                   touch of style to your home decor.
                 </p>
-                <a href="Comfort-Fit-Lowers.html" class="btn btn-primary me-2"
+                <a href="#" class="btn btn-primary me-2"
                   >ENQUIRY</a
                 >
               </div>
@@ -144,7 +144,7 @@
                   Brighten up your space with these fun and functional fridge
                   magnets that add personality to any surface.
                 </p>
-                <a href="Classic-Fit-Trousers.html" class="btn btn-primary me-2"
+                <a href="#" class="btn btn-primary me-2"
                   >ENQUIRY</a
                 >
               </div>
@@ -161,7 +161,7 @@
                   Compact and practical, this keychain keeps your keys organized
                   while showcasing a touch of style.
                 </p>
-                <a href="Casual-Beige-Top.html" class="btn btn-primary me-2"
+                <a href="#" class="btn btn-primary me-2"
                   >ENQUIRY</a
                 >
               </div>
@@ -178,7 +178,7 @@
                   Sip in style with these charming coffee mugs, perfect for
                   enjoying your favorite brew.
                 </p>
-                <a href="Boho-Floral-Maxi.html" class="btn btn-primary me-2"
+                <a href="#" class="btn btn-primary me-2"
                   >ENQUIRY</a
                 >
               </div>
@@ -200,7 +200,7 @@
                   unique and welcoming touch to any room.
                 </p>
                 <a
-                  href="Blue-Printed-Cotton-Dress.html"
+                  href="#"
                   class="btn btn-primary me-2"
                   >ENQUIRY</a
                 >
@@ -223,7 +223,7 @@
                   Showcase your cherished memories with these sleek and durable
                   metal photo frames, perfect for any décor.
                 </p>
-                <a href="Black-Net-Crop-Top.html" class="btn btn-primary me-2"
+                <a href=#" class="btn btn-primary me-2"
                   >ENQUIRY</a
                 >
               </div>
